--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/HomeImages/readsphere.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta property="og:title" content="ReadSphere">
+    <meta property="og:description" content="ReadSphere is an innovative online book collection that offers readers a   diverse and expansive library of literary works. With a user-friendly interface and an extensive catalog spanning various genres, ReadSphere caters to the literary tastes of readers from all walks of life. The platform provides seamless accessibility, allowing users to explore and discover a rich tapestry of books at their fingertips. Whether you're a fan of classic literature, contemporary fiction, or niche genres, ReadSphere curates a dynamic collection that promises an engaging reading experience. Through features such as personalized recommendations and user reviews, ReadSphere fosters a sense of community among book enthusiasts. This digital haven for bibliophiles not only encourages a love for reading but also embraces the ever-evolving landscape of literature in the online realm.">
+    <meta property="og:image" itemprop="image" content="https://ik.imagekit.io/cy84khylgs/Read%20(1).png?updatedAt=1705070125037">
+    <meta property="og:image:width" content="800" />
+    <meta property="og:image:height" content="800" />
+    <meta property="og:url" content="https://readsphere-380e4.web.app">
+    <meta property="og:type" content="website" />
     <title>ReadSphere</title>
   </head>
   <body>
